force-app/main/default/objects/Candidate__c/fields/Candidate_Id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Id__c</fullName>
    <displayFormat>C-{000}</displayFormat>
    <label>Candidate Id</label>
    <type>AutoNumber</type>
</CustomField>