force-app/main/default/objects/Candidate__c/fields/Candidate_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Last_Name__c</fullName>
    <label>Candidate Last Name</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>