force-app/main/default/objects/Candidate__c/fields/Candidate_Level__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Level__c</fullName>
    <label>Candidate Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>