force-app/main/default/objects/Candidate__c/fields/Candidate_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Status__c</fullName>
    <label>Candidate Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Accepted</valueSetName>
    </valueSet>
</CustomField>