force-app/main/default/objects/Candidate__c/fields/Career_Objective_of_candidate__c.field-meta.xml
<CustomField>
    <fullName>Career_Objective_of_candidate__c</fullName>
    <label>Career Objective of candidate</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>