force-app/main/default/objects/Candidate__c/fields/Discount_Given__c.field-meta.xml
<CustomField>
    <fullName>Discount_Given__c</fullName>
    <label>Discount Given</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>