force-app/main/default/objects/Candidate__c/fields/Fee_From_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Fee_From_Candidate__c</fullName>
    <label>Fee From Candidate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>