force-app/main/default/objects/Candidate__c/fields/Type_of_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Candidate__c</fullName>
    <label>Type of Candidate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresher</fullName>
            </value>
            <value>
                <fullName>Experienced - No break in career</fullName>
            </value>
            <value>
                <fullName>Experienced - Break career</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>