force-app/main/default/objects/Candidate__c/validationRules/Age_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 20 ||  ISBLANK(Age__c)</errorConditionFormula>
    <errorMessage>Age should be greater than 20</errorMessage>
</ValidationRule>