force-app/main/default/objects/Candidate__c/validationRules/Experience_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL( Type_of_Candidate__c , &apos;Experienced - No break in career&apos;) &amp;&amp;  (Experience__c  &lt; 5 ||  ISBLANK(Experience__c) ))   || (ISPICKVAL( Type_of_Candidate__c , &apos;Experienced - Break career&apos;)  &amp;&amp;  (Experience__c  &lt; 5 ||  ISBLANK(Experience__c) ))</errorConditionFormula>
    <errorMessage>Experience should be minimum of 5 years.</errorMessage>
</ValidationRule>