force-app/main/default/objects/Candidate__c/listViews/Americas_Candidate.listView-meta.xml
<ListView>
    <fullName>Americas_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>Americas</label>
    <queue>Americas</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>