force-app/main/default/objects/Candidate__c/listViews/APAC_Candidate.listView-meta.xml
<ListView>
    <fullName>APAC_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC</label>
    <queue>APAC</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>