force-app/main/default/objects/Candidate__c/listViews/BGC_Screening_team_Candidate.listView-meta.xml
<ListView>
    <fullName>BGC_Screening_team_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>BGC Screening team</label>
    <queue>BGC_Screening_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>