force-app/main/default/objects/Candidate__c/listViews/EMEA_Candidate.listView-meta.xml
<ListView>
    <fullName>EMEA_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA</label>
    <queue>EMEA</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>