force-app/main/default/objects/Candidate__c/listViews/Technical_Screening_team_Candidate.listView-meta.xml
<ListView>
    <fullName>Technical_Screening_team_Candidate</fullName>
    <filterScope>Queue</filterScope>
    <label>Technical Screening team</label>
    <queue>Technical_Screening_team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>